close requests and don't show slots

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
           <tbody>
             <tr>
               <td><b>Commissions: </b> <span class="status green">Open</span></td>
-              <td><b>Requests: </b> <span class="status green">Open</span></td>
+              <td><b>Requests: </b> <span class="status red">Closed</span></td>
             </tr>
-            <tr>
+            <!-- <tr>
               <td><b>Slots Available:</b> 4/5</td>
-            </tr>
+            </tr> -->
             <tr>
               <td colspan="2"><br>
                 Send an RPC Mail or add <b class="emp">Monstrum#3557</b> to avail of any of the services currently available.</td>
