show portfolio link

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Kingdom Corp</title>
+    <title>Kingdom Corp.</title>
     <link rel="stylesheet" href="https://themonstrousdev.github.io/styles/fancy-fonts.css">
     <link rel="stylesheet" href="https://themonstrousdev.github.io/styles/google-fonts.css">
     <link rel="stylesheet" href="./style.css">
@@ -16,6 +16,7 @@
     <div class="fade">Previously Known As: Elle, Ellexide Codes, The Monster, Deum</div>
     <div id="welcome">
       Elle & Tundra Coding Services<br>
+      <a href="https://imgur.com/a/g6DA3aW" target="_blank" id="portfolio">View Portfolio</a>
     </div>
 
     <div id="about" class="box">
