--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" href="./assets/favicon.png">
     <title>Kingdom Corp.</title>
     <link rel="stylesheet" href="https://themonstrousdev.github.io/styles/fancy-fonts.css">
     <link rel="stylesheet" href="https://themonstrousdev.github.io/styles/google-fonts.css">
