add checkout page

--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" href="./assets/favicon.png">
+    <meta property="og:url" content="https://kingdomcorp.github.io/"> 
+    <meta property="og:title" content="Kingdom Corp.">
+    <meta property="og:description"
+    content="Kingdom Corp. is run by two experienced developers who offer their services to create profiles for your beloved roleplay or D&D characters.">
     <title>Kingdom Corp.</title>
+    <meta property="og:image" content="https://themonstrousdev.github.io/assets/main-logo.png">
+    <link rel="shortcut icon" type="image/x-icon" href="https://i.imgur.com/ZISXQkw.png"> 
     <link rel="stylesheet" href="https://themonstrousdev.github.io/styles/fancy-fonts.css">
     <link rel="stylesheet" href="https://themonstrousdev.github.io/styles/google-fonts.css">
     <link rel="stylesheet" href="./style.css">
