change logo for embed images

--- a/check-out.html
+++ b/check-out.html
@@ -9,7 +9,7 @@
   <meta property="og:title" content="Check Out | Kingdom Corp.">
   <meta property="og:description"
     content="Complete your transaction with the developers to obtain your code. Thank you for choosing Kingdom Corp! Don't forget to recommend us to your friends.">
-  <meta property="og:image" content="https://themonstrousdev.github.io/assets/main-logo.png">
+  <meta property="og:image" content="./assets/favicon-back.png">
   <link rel="shortcut icon" type="image/x-icon" href="https://i.imgur.com/ZISXQkw.png"> 
   <script src="./scripts/libs/jquery.min.js"></script>
   <link rel="stylesheet" href="./kingdom.css">
