change logo for embed images

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:description"
     content="Kingdom Corp. is run by two experienced developers who offer their services to create profiles for your beloved roleplay or D&D characters.">
     <title>Kingdom Corp.</title>
-    <meta property="og:image" content="https://themonstrousdev.github.io/assets/main-logo.png">
+    <meta property="og:image" content="./assets/favicon-back.png">
     <link rel="shortcut icon" type="image/x-icon" href="https://i.imgur.com/ZISXQkw.png"> 
     <link rel="stylesheet" href="https://themonstrousdev.github.io/styles/fancy-fonts.css">
     <link rel="stylesheet" href="https://themonstrousdev.github.io/styles/google-fonts.css">
