--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="title">Kingdom Corp.</div>
     <div class="fade">Previously Known As: Elle, Ellexide Codes, The Monster, Deum</div>
     <div id="welcome">
-      Elle & Tundra Coding Services<br>
+      Elle & Co. Coding Services<br>
       <a href="https://imgur.com/a/g6DA3aW" target="_blank" id="portfolio">View Portfolio</a>
     </div>
 
