--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </p>
         <h2>About Us</h2>
         <p>
-          Kingdom Corp. is composed of two programmers who are working together in tandem to provide you with custom original codes to use for your roleplay needs and desires. We have <span class="price">experience in real world web development</span> and will use our experience to provide not only <span class="emp">aesthetically pleasing visuals but also clean, efficient, and easily understandable code for you to use that implement great UI/UX (user interface/user experience).</span>
+          Kingdom Corp. is composed of programmers who are working together in tandem to provide you with custom original codes to use for your roleplay needs and desires. We have <span class="price">experience in real world web development</span> and will use our experience to provide not only <span class="emp">aesthetically pleasing visuals but also clean, efficient, and easily understandable code for you to use that implement great UI/UX (user interface/user experience).</span>
         </p>
         <!-- <p>
           We will try our best to be versatile when it comes to aesthetic so you will not be limited and can commission us for all sorts of profile types. Though we will do our best to be of great service to everyone,<span class="price"> we do not guarantee that everyone can purchase a commission slot from us.</span> Reasons for this include but <span class="emp">is not limited to</span> scheduling problems, inability to faithfully complete and/or code your requested layout according to your specifications (if you have one in mind already), you're requesting a banned profile type, etc. Nevertheless, Kingdom Corp. promises to do our best to provide you with quality service and outputs.
