--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <table id="status">
           <tbody>
             <tr>
-              <td><b>Commissions: </b> <span class="status green">Open</span></td>
+              <td><b>Commissions: </b> <span class="status green">Open</span> 1/5</td>
               <td><b>Requests: </b> <span class="status red">Closed</span></td>
             </tr>
             <!-- <tr>
@@ -39,7 +39,7 @@
             </tr> -->
             <tr>
               <td colspan="2"><br>
-                Send an RPC Mail or add <b class="emp">Monstrum#3557</b> to avail of any of the services currently available.</td>
+                Send an RPC Mail or add <b class="emp">monstrum</b> on Discord to avail of any of the services currently available.</td>
             </tr>
           </tbody>
         </table>
@@ -114,31 +114,31 @@
         <p>Starting price rates are non-negotiable but you are welcome to ask about the price at all times.</p>
         <h3>Basic Profile</h3>
         <p>
-          <b>Starting Rate:</b> <span class="price">15USD</span> <br>
+          <b>Starting Rate:</b> <span class="price">20USD</span> <br>
           <b>Components:</b> Main image, title, subtitle, information in one textbox <br>
           <b>Default View:</b> Desktop (You can request to have the mobile view, but to have both is an add-on. Please refer to the Add Ons price list.)
         </p>
         <h3>Tabbed Profile</h3>
         <p>
-          <b>Starting Rate:</b> <span class="price">20USD</span> <br>
+          <b>Starting Rate:</b> <span class="price">30USD</span> <br>
           <b>Components:</b> Main image, title, subtitle, 3 tabs (dossier, background, ooc) <br>
           <b>Default View:</b> Desktop (You can request to have the mobile view, but to have both is an add-on. Please refer to the Add Ons price list.)
         </p>
         <h3>Complex Profile</h3>
         <p>
-          <b>Starting Rate:</b> <span class="price">35USD</span> <br>
+          <b>Starting Rate:</b> <span class="price">40USD</span> <br>
           <b>Components:</b> Guaranteed use of JS (if your profile supports it) to increase user aesthetic experience, tabs (3), main image, title, subtitle, introductory animation, free image rendering <br>
           <b>Default View:</b> Desktop (You can request to have the mobile view, but to have both is an add-on. Please refer to the Add Ons price list.)
         </p>
         <h2>Pricing (Others)</h2>
         <h3>Room Code (RPC Hosted)</h3>
         <p>
-          <b>Starting Rate:</b> <span class="price">20USD</span><br>
+          <b>Starting Rate:</b> <span class="price">30USD</span><br>
           <b>Components:</b> Main image/banner, Moderator's List, Owner Panel, Rules Panel
         </p>
         <h3>Room Website (External Website)</h3>
         <p>
-          <b>Starting Rate:</b> <span class="price">35USD</span> <br>
+          <b>Starting Rate:</b> <span class="price">50USD</span> <br>
           <b>Components:</b> None specified but more features may mean an increase in price. Home page, Staff Page, and Rules page are guaranteed. <br>
           <b>Additional:</b> We can help you setup free hosting if you do not have one yet.
         </p>
@@ -166,7 +166,7 @@
         <h3>Code</h3>
         <p>
           <ul>
-            <li><b>Music Player:</b> <span class="price">3USD</span> <i>(<span class="price">+ 2USD</span> if we have to procure the MP3 hosting)</i></li>
+            <li><b>Music Player:</b> <span class="price">5USD</span> <i>(<span class="price">+ 2USD</span> if we have to procure the MP3 hosting)</i></li>
             <li><b>Image Gallery:</b> <span class="price">10USD</span> <i>(hosting provided)</i></li>
             <li><b>Mobile-friendly Addition:</b> No less than <span class="price">10USD</span> (Basic), No less than <span class="price">15USD</span> (Tabbed & Complex) <b class="finePrint">♥</b></li>
             <li><b>Additional Text Box:</b> <span class="price">2USD</span> Each</li>
