Update number of slots

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <table id="status">
           <tbody>
             <tr>
-              <td><b>Commissions: </b> <span class="status green">Open</span> 1/5</td>
+              <td><b>Commissions: </b> <span class="status green">1/5 Slots Open</span></td>
               <td><b>Requests: </b> <span class="status red">Closed</span></td>
             </tr>
             <!-- <tr>
